--- a/TTFPortal/Views/Account/Login.cshtml
+++ b/TTFPortal/Views/Account/Login.cshtml
@@ -111,3 +111,11 @@
 </body>
 
 </html>
+<script>
+    $(function () {
+        //let searchParams = new URLSearchParams(window.location.search)
+        //if (searchParams.has('op')) {
+        //    alert('Hết thời gian thao tác đăng nhập lại');
+        //}
+    })
+</script>
