--- a/TTFPortal/Views/ChamCongKhongThanh/NhanSuChamCongKhongThanh.cshtml
+++ b/TTFPortal/Views/ChamCongKhongThanh/NhanSuChamCongKhongThanh.cshtml
@@ -127,7 +127,13 @@
             data.maPhongBan = maphongban;
           //  data.__RequestVerificationToken = $('input[name="__RequestVerificationToken"]').val();
             $.get("@Url.Action("GetNhanSuChamCongKhongThanh", "ChamCongKhongThanh")", data).done(function (rs) {
-                $("#danh-sach").dxDataGrid({
+                KTApp.unblockPage();
+                if (rs.indexOf("kt_login_signin_form") > 0) {
+                    ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                    setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                }
+                else {
+                    $("#danh-sach").dxDataGrid({
                     dataSource: rs,
                     //selection: {
                     //    mode: "multiple"
@@ -236,7 +242,9 @@
                         window.location.href = '@Url.Action("NhanSuChamCongKhongThanhChiTiet", "ChamCongKhongThanh")?id=' + e.key;
                     },
                 });
-                KTApp.unblockPage();
+            }
+                
+               
             }).fail(function () { KTApp.unblockPage();});
         }
         function XuatFileExcel() {
