--- a/TTFPortal/Views/NghiPhep/Create.cshtml
+++ b/TTFPortal/Views/NghiPhep/Create.cshtml
@@ -351,10 +351,10 @@
                         else if (rs.code == 0) {
                              Swal.fire("Có lỗi! ", rs.text, "error");
                         }
-                        else {
-                             ShowToast.info('Hết thời gian thao tác đăng nhập lại', 4000);
-                             window.location.href = '@Url.Action("Login", "Account")?';
-                         }
+                        else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                            ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 4000);
+                            setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 4000);
+                        }
 
                     }).fail(function () {
                         KTApp.unblockPage();
