--- a/TTFPortal/Views/TangCa/DuyetTangCa.cshtml
+++ b/TTFPortal/Views/TangCa/DuyetTangCa.cshtml
@@ -112,6 +112,7 @@
             data.maPhongBan = $("#select-phongban").dxSelectBox("instance").option('value');
           //  data.__RequestVerificationToken = $('input[name="__RequestVerificationToken"]').val();
             $.get("@Url.Action("GetDuyetTangCa", "TangCa")", data).done(function (rs) {
+                KTApp.unblockPage();
                 if (rs.code == 1) {
                     $("#danh-sach").dxDataGrid({
                         dataSource: rs.data,
@@ -257,11 +258,14 @@
                         },
                     });
                 }
-                else {
-                    Swal.fire("Có lỗi! ", rs.text, "error");
+                else if (rs.code == 0) {
+                       Swal.fire("Có lỗi! ", rs.text, "error");
+                       TimKiem();
                 }
-                
-                KTApp.unblockPage();
+                else if (rs.indexOf("kt_login_signin_form") > 0) {
+                      ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                      setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                }
             }).fail(function () { KTApp.unblockPage();});
         }
     </script>
@@ -306,9 +310,9 @@
                                 else if (rs.code == 0) {
                                     Swal.fire("Có lỗi! ", rs.text, "error");
                                 }
-                                else {
-                                    ShowToast.info('Hết thời gian thao tác đăng nhập lại', 4000);
-                                    window.location.href = '@Url.Action("Login", "Account")?';
+                                else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                                     ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                     setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                                 }
                             }).fail(function () {
                                 KTApp.unblockPage();
@@ -363,9 +367,9 @@
                                 else if (rs.code == 0) {
                                     Swal.fire("Có lỗi! ", rs.text, "error");
                                 }
-                                else {
-                                    ShowToast.info('Hết thời gian thao tác đăng nhập lại', 3000);
-                                    window.location.href = '@Url.Action("Login", "Account")?';
+                                else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                                     ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                     setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                                 }
                             }).fail(function () {
                                 KTApp.unblockPage();
