--- a/TTFPortal/Views/TangCa/Edit.cshtml
+++ b/TTFPortal/Views/TangCa/Edit.cshtml
@@ -536,9 +536,9 @@
                     else if (rs.code == 0) {
                         Swal.fire("Có lỗi! ", rs.text, "error");
                     }
-                    else {
-                        ShowToast.info('Hết thời gian thao tác đăng nhập lại', 4000);
-                        window.location.href = '@Url.Action("Login", "Account")?';
+                    else if (rs.indexOf("kt_login_signin_form") > 0) {
+                            ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                            setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                     }
 
                 }).fail(function () {
@@ -625,10 +625,10 @@
                                 else if (rs.code == 0) {
                                      Swal.fire("Có lỗi! ", rs.text, "error");
                                 }
-                                else {
-                                     ShowToast.info('Hết thời gian thao tác đăng nhập lại', 4000);
-                                     window.location.href = '@Url.Action("Login", "Account")?';
-                                 }
+                                else if (rs.indexOf("kt_login_signin_form") > 0) {
+                                     ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                     setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                                }
                             }).fail(function () {
                                 KTApp.unblockPage();
                             });
@@ -683,9 +683,9 @@
                                     if (rs.text.length > 0)
                                         Swal.fire("Có lỗi! ", rs.text, "error");
                                 }
-                                else {
-                                    ShowToast.info('Hết thời gian thao tác đăng nhập lại', 4000);
-                                    window.location.href = '@Url.Action("Login", "Account")?';
+                                else if (rs.indexOf("kt_login_signin_form") > 0) {
+                                     ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                     setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                                 }
                             }).fail(function () {
                                 KTApp.unblockPage();
@@ -798,9 +798,9 @@
                                 else if (rs.code == 0) {
                                     Swal.fire("Có lỗi! ", rs.text, "error");
                                 }
-                                else {
-                                    ShowToast.info('Hết thời gian thao tác đăng nhập lại', 3000);
-                                    window.location.href = '@Url.Action("Login", "Account")?';
+                                else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                                     ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                     setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                                 }
                             }).fail(function () {
                                 KTApp.unblockPage();
