--- a/TTFPortal/Views/XacNhanCong/DuyetXacNhanCong.cshtml
+++ b/TTFPortal/Views/XacNhanCong/DuyetXacNhanCong.cshtml
@@ -200,8 +200,13 @@
                         },
                     });
                 }
-                else {
-                    Swal.fire("Có lỗi! ", rs.text, "error");
+                else if (rs.code == 0) {
+                     Swal.fire("Có lỗi! ", rs.text, "error");
+                     TimKiem();
+                }
+                else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                       ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                       setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                 }
 
                 KTApp.unblockPage();
@@ -249,9 +254,9 @@
                                 else if (rs.code == 0) {
                                     Swal.fire("Có lỗi! ", rs.text, "error");
                                 }
-                                else {
-                                    ShowToast.info('Hết thời gian thao tác đăng nhập lại', 4000);
-                                    window.location.href = '@Url.Action("Login", "Account")?';
+                                else if (rs.indexOf("kt_login_signin_form") > 0) {
+                                    ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                    setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                                 }
                             }).fail(function () {
                                 KTApp.unblockPage();
@@ -306,9 +311,9 @@
                                 else if (rs.code == 0) {
                                     Swal.fire("Có lỗi! ", rs.text, "error");
                                 }
-                                else {
-                                    ShowToast.info('Hết thời gian thao tác đăng nhập lại', 3000);
-                                    window.location.href = '@Url.Action("Login", "Account")?';
+                                else if (rs.indexOf("kt_login_signin_form") > 0) {
+                                    ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                    setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                                 }
                             }).fail(function () {
                                 KTApp.unblockPage();
