--- a/TTFPortal/Views/HeThong/NhomNguoiDung.cshtml
+++ b/TTFPortal/Views/HeThong/NhomNguoiDung.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = Resources.Menu.CongKyCongNguoiDung;
+    ViewBag.Title = Resources.Menu.HeThongNhomNguoiDung;
 }
 @section ScriptsFile{
     <style>
@@ -30,10 +30,10 @@
         <div class="d-flex align-items-baseline flex-wrap mr-5">
             <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 ">
                 <li class="breadcrumb-item text-muted">
-                    <a href="" class="text-muted">@Resources.Menu.Cong</a>
+                    <a href="" class="text-muted">@Resources.Menu.HeThong</a>
                 </li>
                 <li class="breadcrumb-item text-muted">
-                    <a href="" class="text-muted">@Resources.Menu.CongKyCongNguoiDung</a>
+                    <a href="" class="text-muted">@Resources.Menu.HeThongNhomNguoiDung</a>
                 </li>
 
             </ul>
@@ -42,18 +42,6 @@
 }
 @section Header{
     <div class="d-flex align-items-center flex-wrap mr-1">
-        <div class="form-group row">
-            <div class="col-lg-6">
-                <label class="form-labe">Năm</label>
-                <div id="txt-nam">
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <label class="form-labe">Tháng</label>
-                <div id="txt-thang">
-                </div>
-            </div>
-        </div>
     </div>
     <div class="d-flex">
         <button type="submit" class="btn btn-primary mr-2" id="btn-capnhat" onclick="ThemMoi()">
@@ -73,31 +61,22 @@
 </div>
 @section CustomScripts{
     <script type="text/javascript">
-        var date = new Date(), nam,thang;
-        nam = date.getFullYear();
-        thang = date.getMonth();
+        var dtCaLamViec =  @Html.Raw(TTFPortal.Class.DanhMuc.DMCaLamViec())
         $(function () {
-            $("#txt-nam").dxNumberBox({
-                value: nam,
-                min: 2018,
-                max: 9999,
-                showSpinButtons: true
-            });
-            $("#txt-thang").dxNumberBox({
-                value: thang,
-                min: 1,
-                max: 12,
-                showSpinButtons: true
-            });
+             $('#danh-sach').height($(window).height() - 200);
             TimKiem();
         });
         function TimKiem() {
-            nam  = $("#txt-nam").dxNumberBox("instance").option('value');
-            thang  = $("#txt-thang").dxNumberBox("instance").option('value');
             KTApp.blockPage({ overlayColor: '#000000', state: 'primary', message: 'Đang tải dữ liệu...' });
-            $.get("@Url.Action("GetKyCongNguoiDung", "KyCong")", { nam: nam,thang:thang }).done(function (rs) {
+            $.get("@Url.Action("GetNhomNguoiDung", "HeThong")").done(function (rs) {
                 KTApp.unblockPage();
-                LoadData(rs);
+                if (rs.indexOf("kt_login_signin_form") > 0) {
+                    ShowToast.info('Hết thời gian thao tác đăng nhập lại', 3000);
+                    setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                }
+                else {
+                    LoadData(rs);
+                }
             }).fail(function () {
                 KTApp.unblockPage();
             })
@@ -113,7 +92,7 @@
                     paging: true,
                     filtering: true
                 },
-                keyExpr: "Id",
+                keyExpr:"NHOMNGUOIDUNG",
                 filterRow: {
                     visible: true,
                     applyFilter: "auto"
@@ -121,24 +100,10 @@
                  editing: {
                         mode: "popup",// 'batch' | 'cell' | 'row' | 'popup'
                         allowUpdating:true,
-                        //allowDeleting: true,
+                        allowDeleting: true,
                         allowAdding: true,
                         useIcons: true,
-                        //form: {
-                        //    items: [{
-                        //        itemType: "group",
-                        //        colCount: 1,
-                        //        colSpan: 2,
-                        //        items: ["TenLoaiDuAn",  {
-                        //            dataField: "MoTa",
-                        //            editorType: "dxTextArea",
-                        //            colSpan: 2,
-                        //            editorOptions: {
-                        //                height: 50
-                        //            }
-                        //        }]
-                        //    }]
-                        //}
+
                      },
                 paging: {
                     pageSize: 50
@@ -165,90 +130,63 @@
                 },
                 columns: [
                     {
-                        dataField: "Nam",
-                        caption: "Năm",
-                        width: 80,
-                        dataType: "number",
-                        validationRules: [{ type: "required", message: "Chưa nhật năm" }]
-                        //allowEditing: false,
-                    },
-                    {
-                        dataField: "Thang",
-                        caption: "Tháng",
-                        width: 80,
-                        dataType: "number",
-                        validationRules: [{ type: "required", message: "Chưa nhật tháng" }]
-                        //allowEditing: false,
-                    },
-                    {
-                        dataField: "TuNgay",
-                        caption: "Từ ngày",
-                        width: 100,
-                        //allowEditing: false,
-                        dataType: "date",
-                        format: "dd/MM/yyyy",
-                        validationRules: [{ type: "required", message: "Chưa nhật từ ngày" }]
-                        //fixed: true
-                    },
-                    {
-                        dataField: "DenNgay",
-                        caption: "Đến ngày",
+                        dataField: "NHOMNGUOIDUNG",
+                        caption: "ID",
                         width: 150,
-                        //allowEditing: false,
-                        dataType: "date",
-                        format: "dd/MM/yyyy",
-                        validationRules: [{ type: "required", message: "Chưa nhật đến ngày" }]
+                        allowEditing: false,
                     },
                     {
-                        dataField: "Dong",
-                        caption: "Đóng kỳ công",
-                        width: 120,
+                        dataField: "TENNHOMNGUOIDUNG",
+                        caption: "Tên nhóm",
+                        width: 200,
+                        validationRules: [{ type: "required", message: "Chưa nhật tên nhóm" }]
                     }
                 ],
                 onRowInserting: function (e) {
-                    AddKyCong(e);
+                    AddNhomNguoiDung(e);
                 },
                 onRowUpdating: function (e) {
-                    EditKyCong(e.newData, e.oldData);
-                }
+                    EditNhomNguoiDung(e.newData, e.oldData);
+                },
+                onRowRemoving: function (e) {
+                    XoaNhomNguoiDung(e.key);
+                },
+                onRowDblClick: function (e) {
+                     window.location.href = '@Url.Action("NhomNguoiDungPhanQuyen", "HeThong")?id=' + e.key;
+                },
             });
         }
         function ThemMoi() {
             $('#danh-sach').dxDataGrid('instance').addRow();
         }
-        function AddKyCong(e) {
+        function AddNhomNguoiDung(e) {
             var data = {};
             data.__RequestVerificationToken = $('input[name="__RequestVerificationToken"]').val();
-            data.TuNgay = e.data.TuNgay;
-            data.DenNgay = e.data.DenNgay;
-            data.Nam = e.data.Nam;
-            data.Thang = e.data.Thang;
-            data.Dong = e.data.Dong;
+            data.TENNHOMNGUOIDUNG = e.data.TENNHOMNGUOIDUNG;
             KTApp.blockPage({ overlayColor: '#000000', state: 'primary', message: 'Đang lưu thông tin...' });
-            $.post('@Url.Action("Add_KyCongNguoiDung", "KyCong")', data).done(function (rs) {
-                KTApp.unblockPage();
+            $.post('@Url.Action("LuuNhomNguoiDung", "HeThong")', data).done(function (rs) {
                 if (rs.code == "1") {
-                   
+                    KTApp.unblockPage();
                     ShowToast.success('Thành công', 3000);
                     TimKiem();
                 }
-                else if (rs.code == 0) {
-                      Swal.fire("Có lỗi! ", rs.text, "error");
-                      TimKiem();
+                else if(rs.code==0) {
+                    TimKiem();
+                    KTApp.unblockPage();
+                        Swal.fire("Có lỗi!", rs.text, "error");
                 }
-                else if (rs.indexOf("kt_login_signin_form") > 0) {
-                      ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
-                      setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                    ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                    setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
                 }
-               
 
             }).fail(function () {
                 KTApp.unblockPage();
                 TimKiem()
              });
         }
-        function EditKyCong(newData, oldData) {
-            var data = {};
+        function EditNhomNguoiDung(newData, oldData) {
+                var data = {};
                 data.__RequestVerificationToken = $('input[name="__RequestVerificationToken"]').val();
                 var arryPropertyName = Object.getOwnPropertyNames(newData);
                 for (var i = 0; i < arryPropertyName.length; i++) {
@@ -256,22 +194,52 @@
                     oldData[arryPropertyName[i]] = newData[arryPropertyName[i]].toString();
                 }
                 data.item = oldData;
-                $.post('@Url.Action("EditKyCongNguoiDung", "KyCong")', data).done(function (rs) {
+                $.post('@Url.Action("LuuNhomNguoiDung", "HeThong")', data).done(function (rs) {
                     if (rs.code == "1") {
                         ShowToast.success("Thành công", 3000);
                         TimKiem();
                     }
                     else if (rs.code == 0) {
-                         Swal.fire("Có lỗi! ", rs.text, "error");
-                         TimKiem();
-                    }
-                    else if (rs.indexOf("kt_login_signin_form") > 0) {
-                         ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
-                         setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
-                    }
-                }).fail(function () {
+                          Swal.fire("Có lỗi! ", rs.text, "error");
+                     }
+                     else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                            ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                            setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                     }
+                    }).fail(function () {
                         TimKiem();
-                });
+                    });
+        }
+        function XoaNhomNguoiDung(id) {
+                        KTApp.blockPage({
+                            overlayColor: '#000000',
+                            state: 'primary',
+                            message: 'Đang xóa...'
+                        });
+                        try {
+                            var data = {};
+                            data.id = id;
+                            data.__RequestVerificationToken = $('input[name="__RequestVerificationToken"]').val();
+                            $.post("@Url.Action("XoaNhomNguoiDung", "HeThong")", data).done(function (rs) {
+                                KTApp.unblockPage();
+                                if (rs.code == 1) {
+                                    ShowToast.success( rs.text,3000);
+                                    TimKiem();
+                                }
+                                else if (rs.code == 0) {
+                                    Swal.fire("Có lỗi! ", rs.text, "error");
+                                    TimKiem();
+                                }
+                                else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                                    ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                                    setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                                }
+                            }).fail(function () {
+                                KTApp.unblockPage();
+                            });
+                        } catch (e) {
+                            KTApp.unblockPage();
+                        }
         }
     </script>
 }
