--- a/TTFPortal/Views/NhanSu/Index.cshtml
+++ b/TTFPortal/Views/NhanSu/Index.cshtml
@@ -71,7 +71,7 @@
                     <i class="icon-md fas fa-file-export"></i> @Resources.App.XuatFileExcel
                 </button>
             }
-             <a href="@Url.Action("ExportFileImportNhanSu","NhanSu")" class="btn btn-info font-weight-bolder mr-2" ><i class="icon-lg far fa-file-excel"></i> @Resources.App.ExcelFileMau</a>
+            @* <a href="@Url.Action("ExportFileImportNhanSu","NhanSu")" class="btn btn-info font-weight-bolder mr-2" ><i class="icon-lg far fa-file-excel"></i> @Resources.App.ExcelFileMau</a>*@
             <button type="button" class="btn btn-light-primary font-weight-bolder mr-2" data-toggle="modal" data-target="#ModalFilter" >
                 <i class="icon-md fas fa-filter"></i> @Resources.App.BoLoc
             </button>
@@ -372,8 +372,18 @@
                 contentType: false,
                 success: function (rs) {
                     KTApp.unblockPage();
+                    if (rs.code == 1) {
+                        ShowToast.success(rs.text, 3000);
+                    }
+                    else if (rs.code == 0) {
+                        Swal.fire("Có lỗi! ", rs.text, "error");
+                    }
+                    else  if (rs.indexOf("kt_login_signin_form") > 0) {
+                          ShowToast.info('Hết thời gian thao tác xin đăng nhập lại', 3000);
+                           setTimeout(function () { window.location.href = '@Url.Action("Login", "Account")'; }, 3000);
+                    }
                     //Sho(rs.text)
-                    ShowToast.success(rs.text, 3000);
+                    
                 },
                 error: function (err) {
                     toastr.error("Lỗi hệ thống liên hệ nhà quản trị để được hỗ trợ" + err);
